--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "categories": [
         "Programming Languages"
     ],
-    "homepage": "https://github.com/shdwcat/yui-vs-code-support/blob/main/README.md",
+    "homepage": "https://github.com/shdwcat/yui-vs-code-support",
     "repository": {
         "type": "git",
         "url": "https://github.com/shdwcat/yui-vs-code-support.git"
