support inline yuiscript highlighting (via talescript for now) * only in block mode, flow mode will come next

--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
         "grammars": [{
             "language": "yui",
             "scopeName": "source.yui",
-            "path": "./syntaxes/yui.tmLanguage.json"
+            "path": "./syntaxes/yui.tmLanguage.json",
+            "embeddedLanguages": {
+                "source.yuiscript": "talescript",
+                "meta.embedded.yuiscript": "talescript",
+                "meta.embedded.inline.yuiscript": "talescript"
+            }
         }]
     }
 }
