--- a/package.json
+++ b/package.json
@@ -39,5 +39,12 @@
                 "meta.embedded.inline.yuiscript": "talescript"
             }
         }]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run convert",
+        "convert": "js-yaml syntaxes/yui.tmLanguage.yaml > syntaxes/yui.tmLanguage.json"
+    },
+    "devDependencies": {
+        "js-yaml": "^4.1.0"
     }
 }
