re-mangle the implicit type match regexes because regex is hell

--- a/syntaxes/yui.tmLanguage.yaml
+++ b/syntaxes/yui.tmLanguage.yaml
@@ -255,57 +255,152 @@ repository:
                   "7":
                       name: constant.language.merge.yaml
               match: "(?x)
-                (?x:
-                    (null|Null|NULL|~)
-                    (y|Y|yes|Yes|YES|n|N|no|No|NO|true|True|TRUE|false|False|FALSE|on|On|ON|off|Off|OFF)
-                    | (
-                        (?:
-                            [-+]? 0b [0-1_]+ # (base 2)
-                            | [-+]? 0  [0-7_]+ # (base 8)
-                            | [-+]? (?: 0|[1-9][0-9_]*) # (base 10)
-                            | [-+]? 0x [0-9a-fA-F_]+ # (base 16)
-                            | [-+]? [1-9] [0-9_]* (?: :[0-5]?[0-9])+ # (base 60)
 
-                        )
-                    )
-                    | (
-                        (?x:
-                            [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+] [0-9]+)? # (base 10)
-                            | [-+]? [0-9] [0-9_]* (?: :[0-5]?[0-9])+ \\. [0-9_]* # (base 60)
-                            | [-+]? \\. (?: inf|Inf|INF) # (infinity)
-                            |       \\. (?: nan|NaN|NAN) # (not a number)
+                          \                        (?\
+                          x:
 
-                        )
-                    )
-                    | (
-                        (?x:
-                            \\d{4} - \\d{2} - \\d{2}           # (y-m-d)
-                            | \\d{4}                           # (year)
-                              - \\d{1,2}                       # (month)
-                              - \\d{1,2}                       # (day)
-                              (?: [Tt] | [ \\t]+) \\d{1,2}     # (hour)
-                              : \\d{2}                         # (minute)
-                              : \\d{2}                         # (second)
-                              (?: \\.\\d*)?                    # (fraction)
-                              (?:
-                                  (?:[ \\t]*) Z
-                                  | [-+] \\d{1,2} (?: :\\d{1,2})?
-                              )?                               # (time zone)
-                              
-                        )
-                    )
-                    | (=)
-                    | (<<)
-                )
-                (?:
-                    (?=
-                        \\s* $
-                        | \\s+ //
-                        | \\s* : (\\s|$)
-                        | \\s* : [\\[\\]{},]
-                        | \\s* [\\[\\]{},]
-                    )
-                )"
+                          \                              \
+                          (null|Null|NULL|~)
+
+                          \                            \
+                          | (y|Y|yes|Yes|YES|n|N|no|No|NO|true|True|TRUE|false|\
+                          False|FALSE|on|On|ON|off|Off|OFF)
+
+                          \                            \
+                          | (
+
+                          \                                \
+                          (?:
+
+                          \                                      \
+                          [-+]? 0b [0-1_]+ # (base 2)
+
+                          \                                    \
+                          | [-+]? 0  [0-7_]+ # (base 8)
+
+                          \                                    \
+                          | [-+]? (?: 0|[1-9][0-9_]*) # (base 10)
+
+                          \                                    \
+                          | [-+]? 0x [0-9a-fA-F_]+ # (base 16)
+
+                          \                                    \
+                          | [-+]? [1-9] [0-9_]* (?: :[0-5]?[0-9])+ # (base 60)
+
+                          \                                \
+                          )
+
+                          \                              \
+                          )
+
+                          \                            \
+                          | (
+
+                          \                                \
+                          (?x:
+
+                          \                                      \
+                          [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+]
+                          [0-9]+)? # (base 10)
+
+                          \                                    \
+                          | [-+]? [0-9] [0-9_]* (?: :[0-5]?[0-9])+ \\. [0-9_]* #
+                          (base 60)
+
+                          \                                    \
+                          | [-+]? \\. (?: inf|Inf|INF) # (infinity)
+
+                          \                                    \
+                          |       \\. (?: nan|NaN|NAN) # (not a number)
+
+                          \                                \
+                          )
+
+                          \                              \
+                          )
+
+                          \                            \
+                          | (
+
+                          \                                \
+                          (?x:
+
+                          \                                    \
+                          \\d{4} - \\d{2} - \\d{2}           # (y-m-d)
+
+                          \                                  \
+                          | \\d{4}                           # (year)
+
+                          \                                    \
+                          - \\d{1,2}                       # (month)
+
+                          \                                    \
+                          - \\d{1,2}                       # (day)
+
+                          \                                    \
+                          (?: [Tt] | [ \\t]+) \\d{1,2}      # (hour)
+
+                          \                                    \
+                          : \\d{2}                         # (minute)
+
+                          \                                    \
+                          : \\d{2}                         # (second)
+
+                          \                                    \
+                          (?: \\.\\d*)?                     # (fraction)
+
+                          \                                    \
+                          (?:
+
+                          \                                          \
+                          (?:[ \\t]*) Z
+
+                          \                                        \
+                          | [-+] \\d{1,2} (?: :\\d{1,2})?
+
+                          \                                    \
+                          )?                              # (time zone)
+
+                          \                                \
+                          )
+
+                          \                              \
+                          )
+
+                          \                            \
+                          | (=)
+
+                          \                            \
+                          | (<<)
+
+                          \                        )
+
+                          \                        (?:
+
+                          \                            \
+                          (?=
+
+                          \                                  \
+                          \\s* $
+
+                          \                                \
+                          | \\s+ \\#
+
+                          \                                \
+                          | \\s* : (\\s|$)
+
+                          \                                \
+                          | \\s* : [\\[\\]{},]
+
+                          \                                \
+                          | \\s* [\\[\\]{},]
+
+                          \                            \
+                          )
+
+                          \                        )
+
+                          \                    "
     flow-scalar-plain-out:
         patterns:
             - include: "#flow-scalar-plain-out-implicit-type"
@@ -340,55 +435,147 @@ repository:
                   "7":
                       name: constant.language.merge.yaml
               match: "(?x)
-                (?x:
-                    (null|Null|NULL|~)
-                    (y|Y|yes|Yes|YES|n|N|no|No|NO|true|True|TRUE|false|False|FALSE|on|On|ON|off|Off|OFF)
-                    | (
-                        (?:
-                            [-+]? 0b [0-1_]+ # (base 2)
-                            | [-+]? 0  [0-7_]+ # (base 8)
-                            | [-+]? (?: 0|[1-9][0-9_]*) # (base 10)
-                            | [-+]? 0x [0-9a-fA-F_]+ # (base 16)
-                            | [-+]? [1-9] [0-9_]* (?: :[0-5]?[0-9])+ # (base 60)
 
-                        )
-                    )
-                    | (
-                        (?x:
-                            [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+] [0-9]+)? # (base 10)
-                            | [-+]? [0-9] [0-9_]* (?: :[0-5]?[0-9])+ \\. [0-9_]* # (base 60)
-                            | [-+]? \\. (?: inf|Inf|INF) # (infinity)
-                            |       \\. (?: nan|NaN|NAN) # (not a number)
+                          \                        (?\
+                          x:
 
-                        )
-                    )
-                    | (
-                        (?x:
-                            \\d{4} - \\d{2} - \\d{2}           # (y-m-d)
-                            | \\d{4}                           # (year)
-                              - \\d{1,2}                       # (month)
-                              - \\d{1,2}                       # (day)
-                              (?: [Tt] | [ \\t]+) \\d{1,2}     # (hour)
-                              : \\d{2}                         # (minute)
-                              : \\d{2}                         # (second)
-                              (?: \\.\\d*)?                    # (fraction)
-                              (?:
-                                  (?:[ \\t]*) Z
-                                  | [-+] \\d{1,2} (?: :\\d{1,2})?
-                              )?                               # (time zone)
-                              
-                        )
-                    )
-                    | (=)
-                    | (<<)
-                )
-                (?:
-                    (?=
-                        \\s* $
-                        | \\s+ //
-                        | \\s* : (\\s|$)
-                    )
-                )"
+                          \                              \
+                          (null|Null|NULL|~)
+
+                          \                            \
+                          | (y|Y|yes|Yes|YES|n|N|no|No|NO|true|True|TRUE|false|\
+                          False|FALSE|on|On|ON|off|Off|OFF)
+
+                          \                            \
+                          | (
+
+                          \                                \
+                          (?:
+
+                          \                                      \
+                          [-+]? 0b [0-1_]+ # (base 2)
+
+                          \                                    \
+                          | [-+]? 0  [0-7_]+ # (base 8)
+
+                          \                                    \
+                          | [-+]? (?: 0|[1-9][0-9_]*) # (base 10)
+
+                          \                                    \
+                          | [-+]? 0x [0-9a-fA-F_]+ # (base 16)
+
+                          \                                    \
+                          | [-+]? [1-9] [0-9_]* (?: :[0-5]?[0-9])+ # (base 60)
+
+                          \                                \
+                          )
+
+                          \                              \
+                          )
+
+                          \                            \
+                          | (
+
+                          \                                \
+                          (?x:
+
+                          \                                      \
+                          [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+]
+                          [0-9]+)? # (base 10)
+
+                          \                                    \
+                          | [-+]? [0-9] [0-9_]* (?: :[0-5]?[0-9])+ \\. [0-9_]* #
+                          (base 60)
+
+                          \                                    \
+                          | [-+]? \\. (?: inf|Inf|INF) # (infinity)
+
+                          \                                    \
+                          |       \\. (?: nan|NaN|NAN) # (not a number)
+
+                          \                                \
+                          )
+
+                          \                              \
+                          )
+
+                          \                            \
+                          | (
+
+                          \                                \
+                          (?x:
+
+                          \                                    \
+                          \\d{4} - \\d{2} - \\d{2}           # (y-m-d)
+
+                          \                                  \
+                          | \\d{4}                           # (year)
+
+                          \                                    \
+                          - \\d{1,2}                       # (month)
+
+                          \                                    \
+                          - \\d{1,2}                       # (day)
+
+                          \                                    \
+                          (?: [Tt] | [ \\t]+) \\d{1,2}      # (hour)
+
+                          \                                    \
+                          : \\d{2}                         # (minute)
+
+                          \                                    \
+                          : \\d{2}                         # (second)
+
+                          \                                    \
+                          (?: \\.\\d*)?                     # (fraction)
+
+                          \                                    \
+                          (?:
+
+                          \                                          \
+                          (?:[ \\t]*) Z
+
+                          \                                        \
+                          | [-+] \\d{1,2} (?: :\\d{1,2})?
+
+                          \                                    \
+                          )?                              # (time zone)
+
+                          \                                \
+                          )
+
+                          \                              \
+                          )
+
+                          \                            \
+                          | (=)
+
+                          \                            \
+                          | (<<)
+
+                          \                        )
+
+                          \                        (?\
+                          x:
+
+                          \                            \
+                          (?=
+
+                          \                                  \
+                          \\s* $
+
+                          \                                \
+                          | \\s+ \\#
+
+                          \                                \
+                          | \\s* : (\\s|$)
+
+                          \                            \
+                          )
+
+                          \                        )
+
+                          \                    "
     flow-scalar-single-quoted:
         begin: "'"
         beginCaptures:
