--- a/syntaxes/yui.tmLanguage.yaml
+++ b/syntaxes/yui.tmLanguage.yaml
@@ -44,9 +44,7 @@ repository:
                         | : \\S
                         | \\s+ (?![#\\s])
                     )*
-                    \\s*
-                    :
-                    \t\t\t\t\t\t\t(\\s|$)
+                    \\s* : (\\s|$)
                 )"
               end: "(?x)
                 (?=
@@ -94,11 +92,6 @@ repository:
         match: (-)(?!\S)
         name: punctuation.definition.block.sequence.item.yaml
     comment:
-        begin: (?:(^[ \t]*)|[ \t]+)(?=//\p{Print}*$)
-        beginCaptures:
-            "1":
-                name: punctuation.whitespace.comment.leading.yaml
-        end: (?!\G)
         patterns:
             - begin: //
               beginCaptures:
@@ -132,23 +125,6 @@ repository:
             - include: "#flow-scalar"
     flow-pair:
         patterns:
-            - begin: \?
-              beginCaptures:
-                  "0":
-                      name: punctuation.definition.key-value.begin.yaml
-              end: (?=[},\]])
-              name: meta.flow-pair.explicit.yaml
-              patterns:
-                  - include: "#prototype"
-                  - include: "#flow-pair"
-                  - include: "#flow-node"
-                  - begin: :(?=\s|$|[\[\]{},])
-                    beginCaptures:
-                        "0":
-                            name: punctuation.separator.key-value.mapping.yaml
-                    end: (?=[},\]])
-                    patterns:
-                        - include: "#flow-value"
             - begin: "(?x)
                 (?=
                     (?:
@@ -162,7 +138,7 @@ repository:
                     )*
                     \\s*
                     :
-                    \t\t\t\t\t\t\t(\\s|$)
+                    (\\s|$)
                 )"
               end: "(?x)
                 (?=
@@ -253,148 +229,23 @@ repository:
                   "6":
                       name: constant.language.value.yaml
               match: "(?x)
-
-                          \                        (?\
-                          x:
-
-                          \                              \
-                          (null|Null|NULL|~)
-
-                          \                            \
+                        (?:
+                          (null|Null|NULL)
                           | (true|True|TRUE|false|False|FALSE)
-
-                          \                            \
-                          | (
-
-                          \                                \
-                          (?:
-
-                          \                                      \
-                          [-+]? 0b [0-1_]+ # (base 2)
-
-                          \                                    \
-                          | [-+]? 0  [0-7_]+ # (base 8)
-
-                          \                                    \
-                          | [-+]? (?: 0|[1-9][0-9_]*) # (base 10)
-
-                          \                                    \
-                          | [-+]? 0x [0-9a-fA-F_]+ # (base 16)
-
-                          \                                    \
-                          | [-+]? [1-9] [0-9_]* (?: :[0-5]?[0-9])+ # (base 60)
-
-                          \                                \
-                          )
-
-                          \                              \
-                          )
-
-                          \                            \
-                          | (
-
-                          \                                \
-                          (?x:
-
-                          \                                      \
-                          [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+]
-                          [0-9]+)? # (base 10)
-
-                          \                                    \
-                          | [-+]? [0-9] [0-9_]* (?: :[0-5]?[0-9])+ \\. [0-9_]* #
-                          (base 60)
-
-                          \                                    \
-                          | [-+]? \\. (?: inf|Inf|INF) # (infinity)
-
-                          \                                    \
-                          |       \\. (?: nan|NaN|NAN) # (not a number)
-
-                          \                                \
-                          )
-
-                          \                              \
-                          )
-
-                          \                            \
-                          | (
-
-                          \                                \
-                          (?x:
-
-                          \                                    \
-                          \\d{4} - \\d{2} - \\d{2}           # (y-m-d)
-
-                          \                                  \
-                          | \\d{4}                           # (year)
-
-                          \                                    \
-                          - \\d{1,2}                       # (month)
-
-                          \                                    \
-                          - \\d{1,2}                       # (day)
-
-                          \                                    \
-                          (?: [Tt] | [ \\t]+) \\d{1,2}      # (hour)
-
-                          \                                    \
-                          : \\d{2}                         # (minute)
-
-                          \                                    \
-                          : \\d{2}                         # (second)
-
-                          \                                    \
-                          (?: \\.\\d*)?                     # (fraction)
-
-                          \                                    \
-                          (?:
-
-                          \                                          \
-                          (?:[ \\t]*) Z
-
-                          \                                        \
-                          | [-+] \\d{1,2} (?: :\\d{1,2})?
-
-                          \                                    \
-                          )?                              # (time zone)
-
-                          \                                \
-                          )
-
-                          \                              \
-                          )
-
-                          \                            \
-                          | (=)
-
-                          \                        )
-
-                          \                        (?:
-
-                          \                            \
-                          (?=
-
-                          \                                  \
-                          \\s* $
-
-                          \                                \
-                          | \\s+ \\#
-
-                          \                                \
-                          | \\s* : (\\s|$)
-
-                          \                                \
+                          | ((?:
+                            [-+]? 0b [0-1_]+
+                            | [-+]? 0o  [0-7_]+
+                            | [-+]? (?: 0|[1-9][0-9_]*)
+                            | [-+]? 0x [0-9a-fA-F_]+
+                            ))
+                        | ((?:
+                          [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+] [0-9]+)?
+                          ))
+                        )
+                        (?=\\s*$|\\s+\/\/|\\s*:(\\s|$)
                           | \\s* : [\\[\\]{},]
-
-                          \                                \
                           | \\s* [\\[\\]{},]
-
-                          \                            \
-                          )
-
-                          \                        )
-
-                          \                    "
+                          )"
     flow-scalar-plain-out:
         patterns:
             - include: "#flow-scalar-plain-out-implicit-type"
@@ -422,148 +273,21 @@ repository:
                       name: constant.numeric.integer.yaml
                   "4":
                       name: constant.numeric.float.yaml
-                  "5":
-                      name: constant.other.timestamp.yaml
-                  "6":
-                      name: constant.language.value.yaml
               match: "(?x)
-
-                          \                        (?\
-                          x:
-
-                          \                              \
-                          (null|Null|NULL|~)
-
-                          \                            \
+                        (?:
+                          (null|Null|NULL)
                           | (true|True|TRUE|false|False|FALSE)
-
-                          \                            \
-                          | (
-
-                          \                                \
-                          (?:
-
-                          \                                      \
-                          [-+]? 0b [0-1_]+ # (base 2)
-
-                          \                                    \
-                          | [-+]? 0  [0-7_]+ # (base 8)
-
-                          \                                    \
-                          | [-+]? (?: 0|[1-9][0-9_]*) # (base 10)
-
-                          \                                    \
-                          | [-+]? 0x [0-9a-fA-F_]+ # (base 16)
-
-                          \                                    \
-                          | [-+]? [1-9] [0-9_]* (?: :[0-5]?[0-9])+ # (base 60)
-
-                          \                                \
-                          )
-
-                          \                              \
-                          )
-
-                          \                            \
-                          | (
-
-                          \                                \
-                          (?x:
-
-                          \                                      \
-                          [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+]
-                          [0-9]+)? # (base 10)
-
-                          \                                    \
-                          | [-+]? [0-9] [0-9_]* (?: :[0-5]?[0-9])+ \\. [0-9_]* #
-                          (base 60)
-
-                          \                                    \
-                          | [-+]? \\. (?: inf|Inf|INF) # (infinity)
-
-                          \                                    \
-                          |       \\. (?: nan|NaN|NAN) # (not a number)
-
-                          \                                \
-                          )
-
-                          \                              \
-                          )
-
-                          \                            \
-                          | (
-
-                          \                                \
-                          (?x:
-
-                          \                                    \
-                          \\d{4} - \\d{2} - \\d{2}           # (y-m-d)
-
-                          \                                  \
-                          | \\d{4}                           # (year)
-
-                          \                                    \
-                          - \\d{1,2}                       # (month)
-
-                          \                                    \
-                          - \\d{1,2}                       # (day)
-
-                          \                                    \
-                          (?: [Tt] | [ \\t]+) \\d{1,2}      # (hour)
-
-                          \                                    \
-                          : \\d{2}                         # (minute)
-
-                          \                                    \
-                          : \\d{2}                         # (second)
-
-                          \                                    \
-                          (?: \\.\\d*)?                     # (fraction)
-
-                          \                                    \
-                          (?:
-
-                          \                                          \
-                          (?:[ \\t]*) Z
-
-                          \                                        \
-                          | [-+] \\d{1,2} (?: :\\d{1,2})?
-
-                          \                                    \
-                          )?                              # (time zone)
-
-                          \                                \
-                          )
-
-                          \                              \
-                          )
-
-                          \                            \
-                          | (=)
-
-                          \                        )
-
-                          \                        (?\
-                          x:
-
-                          \                            \
-                          (?=
-
-                          \                                  \
-                          \\s* $
-
-                          \                                \
-                          | \\s+ \\#
-
-                          \                                \
-                          | \\s* : (\\s|$)
-
-                          \                            \
-                          )
-
-                          \                        )
-
-                          \                    "
+                          | ((?:
+                            [-+]? 0b [0-1_]+
+                            | [-+]? 0o  [0-7_]+
+                            | [-+]? (?: 0|[1-9][0-9_]*)
+                            | [-+]? 0x [0-9a-fA-F_]+
+                            ))
+                        | ((?:
+                          [-+]? (?: [0-9] [0-9_]*)? \\. [0-9.]* (?: [eE] [-+] [0-9]+)?
+                          ))
+                        )
+                        (?=\\s*$|\\s+\/\/|\\s*:(\\s|$))"
     flow-scalar-single-quoted:
         begin: "'"
         beginCaptures:
